--- a/01_Sesion-I/01_CHEMBL.ipynb
+++ b/01_Sesion-I/01_CHEMBL.ipynb
@@ -8,7 +8,7 @@
     "## Conceptos a trabajar\n",
     "**Uniprot:** Es una base de datos que busca proporcionar a la comunidad científica un recurso integral, de alta calidad y de libre acceso de secuencias de proteínas e información funcional. Referencia: [Uniprot](https://www.uniprot.org/).\n",
     "\n",
-    "**ChEMBL:** Es una base de datos que contiene moléculas bioactivas, reune datos químicos, de bioactividad y genómicos. Refernecia: [ChEMBL](https://www.ebi.ac.uk/chembl/)\n",
+    "**ChEMBL:** Es una base de datos que contiene moléculas bioactivas, reune datos químicos, de bioactividad y genómicos. Referencia: [ChEMBL](https://www.ebi.ac.uk/chembl/)\n",
     "\n",
     "**Half-maximal inhibitory concentration (IC50):** Expresa la cantidad de fármaco necesaria para inhibir un proceso biológico a la mitad del valor no inhibido, es la medida más utilizada de la eficacia o potencia de un fármaco. Referencia: [Aykul, S. y Martínez-Hackert, E. (2016)](https://doi.org/10.1016/j.ab.2016.06.025)\n",
     "\n",
@@ -34,7 +34,7 @@
     "\n",
     "**Protein Target Classification**: Enzyme > Kinase > Protein Kinase > CMGC protein kinase group > CMGC protein kinase GSK family\n",
     "\n",
-    "Debemos buscar el ID del target de interes en la base de datos Uniprot, que en este caso es Glucógeno sintasa quinasa-3 beta, ID: [P49841](https://www.uniprot.org/uniprot/P49841)."
+    "Debemos buscar el ID del target de interés en la base de datos Uniprot, que en este caso es Glucógeno sintasa quinasa-3 beta, ID: [P49841](https://www.uniprot.org/uniprot/P49841)."
    ],
    "metadata": {
     "collapsed": false
@@ -107,7 +107,7 @@
     }
    ],
    "source": [
-    "# Seleccionar el target de interes\n",
+    "# Seleccionar el target de interés\n",
     "target = target_P49841[0]\n",
     "print(target)\n",
     "# Guardar el ChEMBL-ID\n",
@@ -643,7 +643,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Ahora se puede hacar el instograma de los valores de la columna `pchembl_value`"
+    "Ahora se puede hacer el histograma de los valores de la columna `pchembl_value`"
    ],
    "metadata": {
     "collapsed": false
