--- a/01_Sesion-I/01_CHEMBL_Colab.ipynb
+++ b/01_Sesion-I/01_CHEMBL_Colab.ipynb
@@ -3,6 +3,15 @@
   {
    "cell_type": "markdown",
    "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://github.com/ramirezlab/Farmacoinformatica-2022/blob/main/01_Sesion-I/01_CHEMBL_Colab.ipynb)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "# Práctica 1: Adquirir y analizar datos de ChEMBL\n",
     "\n",
     "## Conceptos a trabajar\n",
