--- a/02_Sesiones-practicas/01_Sesion-I/01_CHEMBL_Colab.ipynb
+++ b/02_Sesiones-practicas/01_Sesion-I/01_CHEMBL_Colab.ipynb
@@ -3,6 +3,15 @@
   {
    "cell_type": "markdown",
    "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ramirezlab/Farmacoinformatica-2022/blob/main/01_Sesion-I/01_CHEMBL_Colab.ipynb)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "# Práctica 1: Adquirir y analizar datos de ChEMBL\n",
     "\n",
     "## Conceptos a trabajar\n",
@@ -35,6 +44,17 @@
     "**Protein Target Classification**: Enzyme > Kinase > Protein Kinase > CMGC protein kinase group > CMGC protein kinase GSK family\n",
     "\n",
     "Debemos buscar el ID del target de interés en la base de datos Uniprot, que en este caso es Glucógeno sintasa quinasa-3 beta, ID: [P49841](https://www.uniprot.org/uniprot/P49841)."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "!pip install chembl_webresource_client"
    ],
    "metadata": {
     "collapsed": false
@@ -191,13 +211,6 @@
     "df_bioact_temp.pop('relation')\n",
     "df_bioact_temp.head()"
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [],
    "metadata": {
     "collapsed": false
    }
@@ -728,7 +741,8 @@
    "execution_count": 23,
    "outputs": [],
    "source": [
-    "df_bioact.to_csv(f\"./data/compuestos_{uniprot_id}.csv\", index=0)"
+    "# El cuaderno de Collab no puede guardar los datos\n",
+    "# df_bioact.to_csv(f\"./data/compuestos_{uniprot_id}.csv\", index=0)"
    ],
    "metadata": {
     "collapsed": false
@@ -758,7 +772,9 @@
     }
    ],
    "source": [
-    "df_bioact = pd.read_csv(f\"data/compuestos_{uniprot_id}.csv\")\n",
+    "# df_bioact = pd.read_csv(f\"data/compuestos_{uniprot_id}.csv\")\n",
+    "url = 'https://raw.githubusercontent.com/pydata/pydata-book/master/ch09/stock_px.csv'\n",
+    "df = pd.read_csv(url,index_col=0,parse_dates=[0])\n",
     "df_bioact.head()"
    ],
    "metadata": {
