--- a/02_Sesiones-practicas/01_Sesion-I/01_CHEMBL_Colab.ipynb
+++ b/02_Sesiones-practicas/01_Sesion-I/01_CHEMBL_Colab.ipynb
@@ -54,7 +54,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "!pip install chembl_webresource_client"
+    "!pip install chembl_webresource_client\n",
+    "!pip install rdkit"
    ],
    "metadata": {
     "collapsed": false
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "# Librería necesaria para comunicarse con CHEMBL\n",
@@ -759,22 +760,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "outputs": [
     {
      "data": {
       "text/plain": "  molecule_chembl_id  type    value units  pchembl_value\n0      CHEMBL2386094  IC50  0.01300    nM          10.89\n1      CHEMBL4084855  IC50  0.10000    nM          10.00\n2      CHEMBL3895998  IC50  0.10000    nM          10.00\n3       CHEMBL564450  IC50  0.00014    uM           9.85\n4      CHEMBL4077376  IC50  0.20000    nM           9.70",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>molecule_chembl_id</th>\n      <th>type</th>\n      <th>value</th>\n      <th>units</th>\n      <th>pchembl_value</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>CHEMBL2386094</td>\n      <td>IC50</td>\n      <td>0.01300</td>\n      <td>nM</td>\n      <td>10.89</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>CHEMBL4084855</td>\n      <td>IC50</td>\n      <td>0.10000</td>\n      <td>nM</td>\n      <td>10.00</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>CHEMBL3895998</td>\n      <td>IC50</td>\n      <td>0.10000</td>\n      <td>nM</td>\n      <td>10.00</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>CHEMBL564450</td>\n      <td>IC50</td>\n      <td>0.00014</td>\n      <td>uM</td>\n      <td>9.85</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>CHEMBL4077376</td>\n      <td>IC50</td>\n      <td>0.20000</td>\n      <td>nM</td>\n      <td>9.70</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# df_bioact = pd.read_csv(f\"data/compuestos_{uniprot_id}.csv\")\n",
-    "url = 'https://raw.githubusercontent.com/pydata/pydata-book/master/ch09/stock_px.csv'\n",
-    "df = pd.read_csv(url,index_col=0,parse_dates=[0])\n",
+    "url = 'https://raw.githubusercontent.com/ramirezlab/Farmacoinformatica-2022/main/02_Sesiones-practicas/01_Sesion-I/data/compuestos_P49841.csv'\n",
+    "df_bioact = pd.read_csv(url,parse_dates=[0])\n",
     "df_bioact.head()"
    ],
    "metadata": {
@@ -794,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "# Librería necesaria para comunicarse con CHEMBL\n",
@@ -807,7 +808,9 @@
     "\n",
     "# Cargamos el archivo antes guardado\n",
     "uniprot_id = 'P49841'\n",
-    "df_bioact = pd.read_csv(f\"data/compuestos_{uniprot_id}.csv\")"
+    "# df_bioact = pd.read_csv(f\"data/compuestos_{uniprot_id}.csv\")\n",
+    "url = 'https://raw.githubusercontent.com/ramirezlab/Farmacoinformatica-2022/main/02_Sesiones-practicas/01_Sesion-I/data/compuestos_P49841.csv'\n",
+    "df_bioact = pd.read_csv(url,parse_dates=[0])"
    ],
    "metadata": {
     "collapsed": false
@@ -1142,7 +1145,8 @@
    "execution_count": 35,
    "outputs": [],
    "source": [
-    "df_output.to_csv(f\"data/compounds_{uniprot_id}_full.csv\", index=0)"
+    "# El cuaderno de Collab no puede guardar los datos\n",
+    "# df_output.to_csv(f\"data/compounds_{uniprot_id}_full.csv\", index=0)"
    ],
    "metadata": {
     "collapsed": false
