--- a/02_Sesiones-practicas/01_Sesion-I/01_CHEMBL_Colab.ipynb
+++ b/02_Sesiones-practicas/01_Sesion-I/01_CHEMBL_Colab.ipynb
@@ -606,7 +606,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Colo la columna `pchembl_value` tiene valores como texto, se deben convetir a valores numéricos"
+    "Como la columna `pchembl_value` tiene valores como texto, se deben convetir a valores numéricos"
    ],
    "metadata": {
     "collapsed": false
