--- a/02_Sesiones-practicas/01_Sesion-I/01_CHEMBL_Colab.ipynb
+++ b/02_Sesiones-practicas/01_Sesion-I/01_CHEMBL_Colab.ipynb
@@ -1029,7 +1029,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Para poder emplear la siguiente función de rdkit es necesario que todos los compuestos tenga SMILES, por esto eliminamos los compuestos sin SMILES en el dataframe"
+    "Para poder emplear la siguiente función de rdkit es necesario que todos los compuestos tengan SMILES, por esto eliminamos los compuestos sin SMILES en el dataframe"
    ],
    "metadata": {
     "collapsed": false
