--- a/02_Sesiones-practicas/07-Sesion-VII/Docking-smina/Smina.ipynb
+++ b/02_Sesiones-practicas/07-Sesion-VII/Docking-smina/Smina.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ramirezlab/Farmacoinformatica/blob/main/02_Sesiones-practicas/07_Sesion-VII/Smina.ipynb)"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/drive/1lpXuRRoV_ltGdq_MzzbVVbhbNzHY5tFD?usp=sharing)"
    ]
   },
   {
