--- a/02_Sesiones-practicas/07-Sesion-VII/Docking-smina/Smina.ipynb
+++ b/02_Sesiones-practicas/07-Sesion-VII/Docking-smina/Smina.ipynb
@@ -14,7 +14,7 @@
    },
    "source": [
     "# Basic Protein-ligand Docking with Smina (Re-Docking)\n",
-    "Smina protein-ligand re-docking   \n",
+    "Smina protein-ligand Re-docking   \n",
     "* Laboratorio de diseño de fármacos Nanocell\n",
     "* https://www.nanocell.cl\n",
     "* Mr. Ignacio Martínez Valenzuela\n",
